{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 36,
  "lineage": "2f66cef2-d78d-99af-102a-a8f97b472807",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/networkSecurityGroups/avm-eagle-nsg",
            "location": "eastus",
            "name": "avm-eagle-nsg",
            "resource_group_name": "RG-ALLRegion-Automation-Team",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "random_pet.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/routeTables/avm-eagle-rt",
            "location": "eastus",
            "name": "avm-eagle-rt",
            "resource_group_name": "RG-ALLRegion-Automation-Team",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "random_pet.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "delegation": [
              {
                "name": "managedinstancedelegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Sql/managedInstances"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/virtualNetworks/avm-eagle-vnet/subnets/avm-eagle-subnet",
            "name": "avm-eagle-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-ALLRegion-Automation-Team",
            "virtual_network_name": "avm-eagle-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example",
            "random_pet.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/virtualNetworks/avm-eagle-vnet/subnets/avm-eagle-subnet",
            "network_security_group_id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/networkSecurityGroups/avm-eagle-nsg",
            "subnet_id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/virtualNetworks/avm-eagle-vnet/subnets/avm-eagle-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example",
            "random_pet.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/virtualNetworks/avm-eagle-vnet/subnets/avm-eagle-subnet",
            "route_table_id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/routeTables/avm-eagle-rt",
            "subnet_id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/virtualNetworks/avm-eagle-vnet/subnets/avm-eagle-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_route_table.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example",
            "random_pet.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7c6c12ba-40a3-489d-abcc-7343b293ce4b",
            "id": "/subscriptions/edf6dd9d-7c4a-4bca-a997-945f3d60cf4e/resourceGroups/RG-ALLRegion-Automation-Team/providers/Microsoft.Network/virtualNetworks/avm-eagle-vnet",
            "location": "eastus",
            "name": "avm-eagle-vnet",
            "resource_group_name": "RG-ALLRegion-Automation-Team"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "random_pet.prefix"
          ]
        }
      ]
    }
  ]
}